[package]
name = "logatechapi"
version = "0.1.0"
authors = ["propenster <propenster@mail.me>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
diesel = { version = "2.0.4", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4", "serde"] }

